--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,21 +7,16 @@ main:
   - name: Bio
     url: /
     weight: 10
-  - name: Papers
-    url: /#papers
-    weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
-    url: experience/
-    weight: 20
   - name: Projects
-    url: projects/
-    weight: 30
-  - name: Teaching
-    url: teaching/
-    weight: 40
+    url: /#projects
+    weight: 11
+  - name: Posts
+    url: /#posts
+    weight: 12
+  - name: Publications
+    url: /#publications
+    weight: 13
+  - name: Contact
+    url: contact/
+    weight: 20
+
