--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: /
     weight: 10
   - name: Projects
-    url: /#projects
+    url: /#pandas
     weight: 11
   - name: Posts
     url: /#posts
@@ -17,5 +17,5 @@ main:
     url: /#publications
     weight: 13
   - name: Contact
-    url: /#contact
+    url: contact
     weight: 20
