--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: /
     weight: 10
   - name: Projects
-    url: /#projects
+    url: content/project
     weight: 11
   - name: Posts
     url: /#posts
