--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,11 +11,11 @@ main:
     url: /projects/
     weight: 11
   - name: Posts
-    url: /#posts
+    url: /posts/
     weight: 12
   - name: Publications
     url: /publication/
     weight: 13
   - name: Contact
-    url: contact
+    url: /contact/
     weight: 20
