--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: /projects/
     weight: 11
   - name: Posts
-    url: /posts/
+    url: /post/
     weight: 12
   - name: Publications
     url: /publication/
