--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -59,14 +59,20 @@ jobs:
         path: ./public
 
   # Deploy website to GitHub Pages hosting
-  deploy:
-    if: github.repository_owner != 'HugoBlox'
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+ deploy:
+  if: github.repository_owner != 'HugoBlox'
+  environment:
+    name: github-pages
+    url: ${{ steps.deployment.outputs.page_url }}
+  runs-on: ubuntu-latest
+  needs: build
+  steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: github-pages
+        path: ./public
+
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
