--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -67,6 +67,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: github-pages
+        path: ./public
+
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
